--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import '~bootstrap/scss/bootstrap';
 @import './assets/sass/main';
-@import '~bootstrap/scss/bootstrap-reboot';
-@import '~bootstrap/scss/bootstrap-grid';
+// If you want to use only bootstrap grid, user these imports
+// @import './assets/sass/main';
+// @import '~bootstrap/scss/bootstrapz-reboot';
+// @import '~bootstrap/scss/bootstrap-grid';
